# gg

./: .gitignore  README.md  pyproject.toml
.omx/plans/: orchestrator-remaining-work.md
docs/: diagram-design.md  orchestrator-implementation-tasks.md
src/gear_grinders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gg/: cli.py
src/gg/agents/: __init__.py  base.py  claude.py  codex.py
src/gg/analyzers/: codebase.py  dependencies.py  git_history.py  languages.py  project_intel.py  structure.py
src/gg/commands/: init.py
src/gg/generators/: agent_files.py  knowledge.py  observations.py  specs.py
src/gg/knowledge/: collectors.py  compiler.py  engine.py  events.py  search.py
src/gg/orchestrator/: __init__.py  agent_catalog.py  agent_patterns.py  config.py  context.py  doctor.py  errors.py  evaluation.py  executor.py  finding_feedback.py  git.py  lock.py  logging.py  memory.py  pipeline.py  plugins.py  project_context.py  prompt_manifest.py  prompts.py  protocol.py  rate_limit.py  report.py  review.py  review_gates.py  sandbox.py  schemas.py  state.py  store.py  task_analysis.py  truth.py  verification.py
src/gg/utils/: git_ops.py  system.py
tests/: test_analyzers.py  test_evaluation.py  test_executor_runtime.py  test_knowledge.py  test_orchestrator.py  test_review.py  test_search.py  test_system.py  test_v3_protocol.py  test_verification.py
